--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Coding Quiz</title>
   </head>
   <body>
-    
+    <div id="quiz">Coding Quiz!</div>
+      <button id="start">Start Quiz</button>
+    </div>
+
+    <div> All Done!</div>
+      <button id="submit">Submit</button>
+
+    <div>High Scores</div>
+      <button id="back">Go Back</button>
+      <button id="clear">Clear High Scores</button>
   </body>
