--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/style.css" />
+    
     <title>Coding Quiz</title>
   </head>
   <body>
-    <div id="quiz">Coding Quiz!</div>
-      <button id="start">Start Quiz</button>
-    </div>
+    <header>
+      <div class= "score-count">View High Scores</div>
+      <!--need countdown timer here-->
+    </header>
+      <div class="quiz-intro"></div>
+          <div class = "timer-text">Timer:</div>
+          <div class= "timer-count">100</div>
+          
+        </div>
 
-    <div> All Done!</div>
-      <button id="submit">Submit</button>
+      </div>
 
-    <div>High Scores</div>
-      <button id="back">Go Back</button>
-      <button id="clear">Clear High Scores</button>
+    <div id="quiz"></div>
+    <button id="submit">Submit</button>
+
+    <script type="javascript" src="./assets/setting.js">
+    </script>
   </body>
+  
