--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
 
-    <div class= "score-count"><a href="highscores.html">View High Scores</a></div>
+    <div class= "score-count">View High Scores</div>
     <div class = "timer-text">Timer: <span id = "timer-count">100</span></div>
 
     <div class="wrapper>">
@@ -39,7 +39,7 @@
     </div>
 
     <script src="./assets/setting.js"></script>
-    <scrpit src="./assets/highscores.js"></scrpit>
+    
   </body>
 
   </html>
