added timer and for loop

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class= "score-count">View High Scores</div>
     <div class = "timer-text">Timer: <span id = "timer-count">100</span></div>
 
-    <div class="wrapper>">
+    <div class="wrapper">
       <div id="welcome-screen" class="welcome">
         <h1>Coding Quiz</h1>
         <p>Want to test your coding knowledge? Answer these coding-related 
           questions within the time limit and see how you do! The clock will run down an extra 
           15 seconds for every incorrect answer. Good luck!
         </p>
-        <button id="start">Start Quiz!</button>
+        <button type="button" id="start">Start Quiz!</button>
       </div>
       
       <div id="questions" class="hide">
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <script src="./assets/setting.js"></script>
+    <script src="./assets/settings.js"></script>
     
   </body>
 
