--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="answer" class="options"></div>
       </div>
 
-      <div id="final-page" class="hide">
+      <div id="end-screen" class="hide">
         <h2>Quiz Complete!</h2>
         <p>Here is your final score: <span id="score"></span></p>
         <p>Enter your intials: <input type="text" id="intials" max="2" />
