--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <div class= "score-count">View High Scores</div>
-    <div class = "timer-text">Timer: <span id = "timer-count">100</span></div>
+    <div class = "timer-text">Timer: <span id = "timer-count">0</span></div>
 
     <div class="wrapper">
       <div id="welcome-screen" class="welcome">
@@ -23,10 +23,11 @@
         </p>
         <button type="button" id="start">Start Quiz!</button>
       </div>
-      
+    
       <div id="questions" class="hide">
         <h2 id="question-number"></h2>
         <div id="answer" class="options"></div>
+        <p id="message"></p>
       </div>
 
       <div id="end-screen" class="hide">
