Added functions to generate start and end screens, added to CSS, created buttons in JS for choices

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/style.css" />
+  
     
     <title>Coding Quiz</title>
   </head>
@@ -26,7 +27,7 @@
     
       <div id="questions" class="hide">
         <h2 id="question-number"></h2>
-        <div id="answer" class="options"></div>
+        <div id="answers" class="options"></div>
         <p id="message"></p>
       </div>
 
