Added funtion to save high scores and log in local storage

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       <div id="end-screen" class="hide">
         <h2>Quiz Complete!</h2>
         <p>Here is your final score: <span id="score"></span></p>
-        <p>Enter your intials: <input type="text" id="intials" max="2" />
+        <p>Enter your intials:</p>
+        <input type="text" id="initials" max="2" />
           <button id="submit">Submit</button>
-        </p>
+        
       </div>
     </div>
 
