completed JS functions and added div in HTML for high scores

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
       </div>
       
       <div id="high-scores" class="hide">
-        <h2>High Scores</h2>
-        <p>Here is the highest score: </p>
+        <span style="float:left">
+          <button id="play-again">Play Again</button>
+        </span>
+        <h2>High Score</h2>
+        <p>Here is the highest score: <span id="highest-score"></spanid></span></p>
       </div>
     
     <script src="./assets/settings.js"></script>
